# version_finder

./: .flake8  .gitignore  .releaserc  0001-fix-core-gui-cli-versioning-update-all-the-porject-f.patch  CHANGELOG.md  MANIFEST.in  Makefile  README.md  SEMANTIC_RELEASE.md  eslint.config.mjs  forge.config.js  gui_app.py  icon.icns  index.html  install.bat  install.ps1  logger.js  main.js  my-changes.patch  package-lock.json  package.json  preload.js  pyproject.toml  recover_file3.py  recovered_file.txt  recovered_file2.txt  release.config.js  renderer.js  settings.html  settings.js  setup.cfg  setup.py  test_windows_install.ps1  tree-ignore.ps1  unitests.py  version_finder.js  version_finder.py  version_finder.test.js
.github/workflows/: attach-assets.yml  code-cov.yml  manual-semantic-release.yml  publish-pypi-cli.yml  publish-pypi-core.yml  publish-pypi-gui.yml  release-and-build.yml  release-and-coverage.yml  release.yml  semantic-release.yml  unit-test.yml
assets/icons/: icon-jinny.icns  version-finder-icon.icns
cli/: .releaserc  CHANGELOG.md  pyproject.toml
cli/src/version_finder_cli/: cli.py
cli/tests/: test_cli.py
core/: .releaserc  CHANGELOG.md  pyproject.toml  setup.py
core/src/version_finder/: common.py  logger.py  main.py  protocols.py  version_finder.py
core/tests/: conftest.py  create_test_repo.py  test_version_finder.py
css/: style.css
custom_scope_commit_parser/: __init__.py  setup.py
custom_scope_commit_parser/src/: __init__.py  core_scope_parser.py
custom_scope_commit_parser/src/custom_scope_commit_parser/: __init__.py  parsers.py
gui/: .releaserc  CHANGELOG.md  pyproject.toml  setup.py
gui/src/version_finder_gui/: autocomplete_entry.py  gui.py  widgets.py
gui/tests/: test_autocomplete_entry.py  test_destructor.py  test_gui_version.py
src/version_finder/: __cli__.py  __common__.py  __gui__.py  __init__.py  __main__.py  _version.py  core.py  git_executer.py  protocols.py
src/version_finder/logger/: logger.py
tests/: create_test_repo.py  test_cli.py  test_version_finder.py
version_finder/: __init__.py  __main__.py  _version.py  core.py  create_test_repo.py  logger.py  test_version_finder.py
